--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -63,7 +63,7 @@
                     </div>
 	            </div>	
 	            <div class="row">
-	            	<div class="col-sm-3">
+	            	<div class="col-sm-4">
                         <div class="form-group">
 		     		        <%= label_tag "reading_level", "Reading Level", :class=>"control-label" %>
 						    <% if @book.book_reading_grades.blank? %>
@@ -71,6 +71,12 @@
 							<%else%>
 								<%= select_tag :reading_level, options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.id ] }, :selected=>@book.book_reading_grades.map(&:reading_grade_id)), {:class=>"form-control",:multiple => true}%>
 							<%end%>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                        	<%= f.label :active_flag, "Book Status", :class=>"control-label" %></br>
+                        	<%= f.select :active_flag, [["Active","true"],["In Active","false"]], {:prompt => "Select Book Status"}, {:class=>""}%>
                         </div>
                     </div>
 	            </div>	
