--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
 		    <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Web Admin List", users_path(:role_id => Role.where("name='Web Admin'").last) %></li>
          </ul>
     </li>
-    <li class="nav-parent" id="li_webadmin"><%= link_to '<i class="glyphicon glyphicon-book"></i>'.html_safe + "Books", books_path %>
+    <li class="nav-parent" id="li_book"><%= link_to '<i class="glyphicon glyphicon-book"></i>'.html_safe + "Books", books_path %>
          <ul class="children">
 		   <% if can? :create, :books %>
 		     <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
