--- a/app/views/users/_add_update_bulk_licenses.html.erb
+++ b/app/views/users/_add_update_bulk_licenses.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-12">
 	    <div class="panel panel-default">
-	       <%= form_tag(controller: "users", action: "add_update_bulk_licenses", method: "post", class: "form_validation") do %>
+	       <%= form_tag({controller: "users", action: "add_update_bulk_licenses"}, {method: "post", class: "form_validation"}) do %>
 		   <div class="panel-body">
 			   <%= hidden_field_tag :send_mail, @no_mail%>
 			   <%= hidden_field_tag :role_id, params[:role_id]%>
