Quick edit for textarea done

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -76,7 +76,7 @@
                     <div class="col-sm-4">
                         <div class="form-group">
                         	<%= f.label :active_flag, "Book Status", :class=>"control-label" %></br>
-                        	<%= f.select :active_flag, [["Active","true"],["In Active","false"]], {:prompt => "Select Book Status"}, {:class=>""}%>
+                        	<%= f.select :active_flag, [["Active","true"],["Inactive","false"]], {:prompt => "Select Book Status"}, {:class=>""}%>
                         </div>
                     </div>
 	            </div>	
