--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,7 +31,7 @@
 				</address>
                 <address>
                     <strong>Book Status: </strong>
-                    <%= @book.active_flag.eql?(false) ? "In Active" : "Active" %>
+                    <%= @book.active_flag.eql?(false) ? "Inactive" : "Active" %>
                 </address>
             	<div data-no-turbolink>
 					<%= link_to 'Edit', edit_book_path(@book), :class=>"btn btn-success btn-xs" %>
