--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -38,8 +38,10 @@
 			<%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "student", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
 			<%=link_to 'Import Student List', import_list_users_path(:list_type => "student",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 		<%end%>
-		<%=link_to 'Remove Licenses', "", :class=>"btn btn-success btn-xs bulk-remove-license", :disabled => true %>
-		<%=link_to 'Add/Update Licenses', "", :class=>"btn btn-success btn-xs bulk-add-update-license", :disabled => true, data: { toggle: "modal", target: "#add_update_lic", input: 5} %>
+		<% unless @role_id.name.eql?('Web Admin')%>
+			<%=link_to 'Remove Licenses', "", :class=>"btn btn-success btn-xs bulk-remove-license", :disabled => true %>
+			<%=link_to 'Add/Update Licenses', "", :class=>"btn btn-success btn-xs bulk-add-update-license", :disabled => true, data: { toggle: "modal", target: "#add_update_lic", input: 5} %>	
+		<%end%>	
 	
 		<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
 	</div>
@@ -367,6 +369,7 @@ $(".dropdown-quick-edit").click(function(e) {
     e.preventDefault();
     var text = $(this).text();
 	$(this).parent().children(".dropdown-dynamic").removeClass("invisible");
+	$(this).parent().children(".dropdown-dynamic").focus();
 	$(this).addClass("invisible");
 });
 
@@ -374,6 +377,7 @@ $('.dropdown-dynamic').change(function(e) {
     e.preventDefault();
 	dropdown_update_on_quick_edit($(this));
 });	
+
 
 function dropdown_update_on_quick_edit(this_val)
 {
@@ -387,11 +391,11 @@ function dropdown_update_on_quick_edit(this_val)
 }
 
 $(".quick-edit").click(function(e) {
-	//$(this).parent().children(".dynamic").focus();
-    e.preventDefault();
+	e.preventDefault();
     var text = $(this).text();
 	text.replace("<br />", "\n");
     $(this).parent().children(".dynamic").html(text).removeClass("invisible");
+    $(this).parent().children(".dynamic").focus();
     $(this).addClass("invisible");
 });
 
