--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -22,13 +22,13 @@
             <thead>
                 <tr>
                 	<th><%= link_to :All, 'javascript:checkAll("classroom")', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAll("classroom")', :class => "lnk-typ2" %></th>
-					<th>Class Code</th>
-                    <th>Class Name</th>
+					<th><span class="table-header">Class Code</span></th>
+                    <th><span class="table-header">Class Name</span></th>
 					<!-- <th>School Year</th> -->
-					<th>Number Of School Admins</th>
-					<th>Number Of Teachers</th>
-					<th>Number Of Students</th>
-                    <th>Actions</th>
+					<th><span class="table-header">Number Of School Admins</span></th>
+					<th><span class="table-header">Number Of Teachers</span></th>
+					<th><span class="table-header">Number Of Students</span></th>
+                    <th><span class="table-header">Actions</span></th>
                  </tr>
               </thead>
               <tbody>
