--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,6 +1,7 @@
 /*common classes */
 .margin-t-10{margin-top:10px;}
-td{vertical-align: middle !important; position: relative;}
+td {vertical-align: middle !important; position: relative;}
+th {vertical-align: middle !important;}
 textarea {resize:vertical;}
 input[type=checkbox] {cursor:pointer;}
 
@@ -28,6 +29,8 @@ input[type=checkbox] {cursor:pointer;}
 .pageheader .btg-teacher:before{vertical-align: top;}
 .pageheader .btg-student:before{vertical-align: top;}
 
+.panel-default > .panel-heading{padding: 10px 20px 0;}
+
 .fa-lock.increase_size{font-size:20px;}
 .logo_image{width:80px; height:80px;}
 
@@ -39,7 +42,7 @@ input[type=checkbox] {cursor:pointer;}
 .alert_license_success{ background-color: #dff0d8;border-color: #d6e9c6;color: #3c763d;padding: 10px !important;}
 
 .logopanel h1 {font-size: 28px !important;}
-.error_box{ font-weight: normal; line-height: 20px; color: #B94A48; display: block; }
+.error_box{ font-weight: normal; line-height: 20px; color: #B94A48; display: block;margin-top: -10px; }
 .error_message{ color: #B94A48;margin-top: 2px;}
 .error{margin-left: 0px;color: #B94A48;margin-top: 2px;font-weight: 400;}
 
@@ -114,7 +117,7 @@ label.error {display:block;}
 .quick-edit:hover{border: solid 2px #ccc;padding: 5px;margin: -5px;cursor:pointer;}
 .quick-edit{padding:2px;}
 .dropdown-quick-edit:hover{border: solid 2px #ccc;padding: 5px;margin: -5px;cursor:pointer;}
-.empty-quick-edit-field{height: 34px;position: absolute;width: 100%;top: 0;bottom: 0;margin: auto !important;}
+.empty-quick-edit-field{height: 34px;position: absolute;width: 93%;top: 0;bottom: 0;margin: auto !important;}
 .dropdown-quick-edit{padding:2px;}
 .quick-edit-error-msg{text-align: center;margin: 37px auto 0;position: absolute !important;left: 0;right: 0;z-index: 10;}
 .diasble-arrors{color:black;background:#e0e0e0 !important;cursor:default !important;}
@@ -140,13 +143,21 @@ div.loader{ display: none; width:24px; height: 24px;  position: fixed;top: 50%; 
 .top-school-heading{color:#1D2939;text-align:center;font-size:20px !important;display: block;}
 .align-school-header{padding:20px 20px 9px !important;}
 hr.school-heading-hr{margin-top: 21px;}
-.mandatory-align{margin-top:-10px !important;color:#77818e;}
+.mandatory-align{margin-top:-10px !important;padding: 15px 24px 0 0;}
 .tab-links{float:right; display:block}
 
 .user-info-page-lic{margin-top: -24px;margin-left: 400px;}
 .total{background:#d3d7db}
 
 /* Making sign in btn clickable */
-.signin-btn-highlight{}
+.signin-btn-highlight:active{opacity: 0.4}
 	
 .word-wrap{word-wrap: break-word;}	
+
+.show-all{float: right;clear: both;}
+
+.glyphicon, .fa{font-size: 18px; vertical-align: sub;}
+
+.table-header{display: block;width: 80%;min-width: 60px;}
+
+.list-style{list-style: none;}
