--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,17 +1,13 @@
 
 <div class="panel panel-default">
-	<div class="panel-body"> 
+	<div class="panel-body" data-no-turbolink> 
 		<%= text_field_tag :text_field_search %>
-		<%#=link_to "Search", "#", :class=>"" , :id => "search" %>
-
-		<button class="btn btn-primary btn-xs" id="book_search" >
-						    Search
-						    </button>
+		<button class="btn btn-primary btn-xs" id="book_search" >Search</button>
 		<%= form_tag 'books/delete_book' do %>
 		<div class="index_page_btns" data-no-turbolink>
 			<%= link_to 'List All Records', books_path, :class=>"btn btn-success btn-xs" if @search_flag %>
 			<% if can? :create, :books %> <%=link_to 'Add Book', new_book_path, :class=>"btn btn-success btn-xs"%> <%end%>
-			<%= submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-book-list", :id=>'delete_book',:disabled => true, data: { confirm: 'Are you sure?' } %>
+			<%= submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-book-list", :id=>'delete_book',:disabled => true, data: { confirm: 'Are you sure?' } %>			
 		</div>
 		 
 		 <div class="table-responsive">
@@ -19,14 +15,14 @@
 	            <thead>
 	                <tr>
 	            		<th><%= link_to :All, 'javascript:checkAll("book")', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAll("book")', :class => "lnk-typ2" %></th>
-                    	<th>Title</th>
-                    	<th>Author</th>
-                    	<th>Description for Teachers</th>
-                    	<th>Description for Students</th>
-                    	<th>Interest Level</th>
-                    	<th>Reading Level</th>
-                    	<th>Status</th>
-						<th>Actions</th>	
+                    	<th><span class="table-header">Title</span></th>
+                    	<th><span class="table-header">Author</span></th>
+                    	<th><span class="table-header">Description for Teachers</span></th>
+                    	<th><span class="table-header">Description for Students</span></th>
+                    	<th><span class="table-header">Interest Level</span></th>
+                    	<th><span class="table-header">Reading Level</span></th>
+                    	<th><span class="table-header">Status</span></th>
+						<th><span class="table-header">Actions</span></th>	
 	                </tr>
 	            </thead>
 	            <tbody>
@@ -56,10 +52,15 @@
 	        	</tbody>
 	    	</table>
 		</div>
-		<div data-no-turbolink>
-		    <%= paginate @books %>
-		</div>
-		<% end %>		
+		<% if !params[:show_all].eql?('true') %>
+			<div data-no-turbolink>
+		    	<%= paginate @books %>
+			</div>
+		<% end %>
+		<% end %>	
+		<% if !params[:show_all].eql?('true') %>
+			<div class="show-all"><%= link_to 'Show All Books', books_path(:show_all=>true) ,:class=>"btn btn-success btn-xs" %></div>
+		<% end %>	
 	</div>
 </div>		  
   
