--- a/app/views/users/import_list.html.erb
+++ b/app/views/users/import_list.html.erb
@@ -6,7 +6,7 @@
 			<%= hidden_field_tag :school_id, @school_id %>
 			<%= hidden_field_tag :role_id, @role_id %>
 	  		<%= file_field_tag :file %>  
-	  		<%= submit_tag "Import", :onclick => "return validateform();", :class=>"margin-t-10" %>  
+	  		<%= submit_tag "Import", :onclick => "return validateform();", :class=>"margin-t-10 margin-t-10 btn btn-success btn-xs" %>  
 		<% end %>
 	</div>
 </div>	
