--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,23 @@
 <div class="row">
 	<div class="col-md-12">
     	<div class="panel panel-default">
-        	<div class="panel-heading">
-				<% if @user.id == current_user.id%>
-				    <h4 class="panel-title">My Information</h4>
-				<%else%>
-				    <h4 class="panel-title">User Details</h4>
-				<%end%>
+        	<% if @user.id == current_user.id%>
+        		<div class="panel-heading">
+	       			<%unless current_user.school.blank?%>
+	  					<span class="top-school-heading"><%= current_user.school.name + " (" + current_user.school.code + ")" %></span>
+					<%end%>
+	           		<h4 class="panel-title">My Information</h4>
+	        	</div>
+        	<%else%>
+				<div class="panel-heading">
+	       			<%unless @school.blank?%>
+	  					<span class="top-school-heading"><%= @school.name + " (" + @school.code + ")" %></span>
+					<%end%>
+	           		<h4 class="panel-title">User Details</h4>
+	        	</div>
+			<%end%>
             	
-        	</div>
+        	
         	<div class="panel-body">
             	<address>
                 	<strong>First Name:</strong>
