masking for phone no quick edit

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -240,7 +240,7 @@
 
 
 <script type="text/javascript">
-
+$(".mask-phone").mask("(999) 999-9999");
  $('.loader').ajaxStart(function () {
         $(this).fadeIn('fast');
         $('.fade-bg').show();
