--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -58,9 +58,9 @@
 	    showHideMenu('li_school');	
 	}
 	
-email_valid = "<%= url_for :controller=> 'users', :action => 'email_validation', :id=> action_name.eql?("edit") ? @user.id : 0%>"	
+// email_valid = "<%#= url_for :controller=> 'users', :action => 'email_validation', :id=> action_name.eql?("edit") ? @user.id : 0%>"	
 
-username_valid = "<%= url_for :controller=> 'users', :action => 'username_validation', :id=> action_name.eql?("edit") ? @user.id : 0%>"
+// username_valid = "<%#= url_for :controller=> 'users', :action => 'username_validation', :id=> action_name.eql?("edit") ? @user.id : 0%>"
 
 </script>
 
