--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -156,7 +156,7 @@ hr.school-heading-hr{margin-top: 21px;}
 
 .show-all{float: right;clear: both;}
 
-.glyphicon, .fa{font-size: 18px; vertical-align: sub;}
+.table.glyphicon, .fa{font-size: 18px; vertical-align: sub;}
 
 .table-header{display: block;width: 80%;min-width: 60px;}
 
