--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -150,6 +150,9 @@
 
 <script type="text/javascript">
 	showHideMenu('li_book');
+	<% unless current_user.is_web_admin?%>
+	  showHideMenu('li_options');	
+	<%end%>
 	
 	function validateForm()
 	{
