--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -10,11 +10,16 @@
 		<i class="glyphicon glyphicon-search btn btn-primary btn-xs search-icon-align" id="school_search" title="Search School" >	</i>
 		<%= form_tag 'schools/delete_school' do %>
 		<div class="index_page_btns" data-no-turbolink>
-            <% if can? :create, :schools %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
+            <% if can? :create, :schools %> 
+            	<%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> 
+            <%end%>
 			<%=link_to 'List All Records', schools_path, :class=>"btn btn-success btn-xs" if @search_flag %>
 			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
 			<%=link_to 'Import School List', import_list_schools_path, :class=>"btn btn-success btn-xs"%>
+			
+			<% if can? :destroy, :schools %> 
 			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
+		 	<%end%>
 		</div>
 		<div class="loader"><%= image_tag("loader5.gif")%></div>
 		<div class="table-responsive">
@@ -154,6 +159,9 @@ $(document).ready(function(){
 });
 
 showHideMenu('li_school');
+<% unless current_user.is_web_admin?%>
+	showHideMenu('li_options');	
+<%end%>
 	
 	$( ".license_details" ).click(function() {
 	          jQuery.get("<%=url_for(:controller=>'schools',:action=>'get_schoolwise_license_list')%>",{ id : $(this).attr('data-input')},
