--- a/app/views/users/_change_password.html.erb
+++ b/app/views/users/_change_password.html.erb
@@ -7,7 +7,7 @@
 	        	    <div class="row">
 		                <div class="col-sm-6">
 		                    <div class="form-group">
-			   			    	<%= f.label :first_name, :class=>"control-label"%>
+			   			    	<%= f.label :first_name, "First Name", :class=>"control-label"%>
 			   			    	<%= f.text_field :first_name, :class=>"form-control", :readonly=>true %>
 		                    </div>
 		                </div>
@@ -21,20 +21,20 @@
 		            <div class="row">
 		                <div class="col-sm-6">
 		                    <div class="form-group">
-				    		    <%= f.label :password, :class=>"control-label" %><span class="asterisk">*</span>
+				    		    <%= f.label :password, "New Password", :class=>"control-label" %><span class="asterisk">*</span>
 				    			<%= f.password_field :password, :required=>true, :class=>"form-control class_password" %>
 		                    </div>
 		                </div>
 		                <div class="col-sm-6">
 		                    <div class="form-group">
-				    			<%= f.label :password_confirmation, :class=>"control-label" %><span class="asterisk">*</span>
+				    			<%= f.label :password_confirmation, "Confirm New Password", :class=>"control-label" %><span class="asterisk">*</span>
 				    			<%= f.password_field :password_confirmation, :required=>true, :class=>"form-control" %>
 		                    </div>
 		                </div>
 		            </div>
 			    </div>
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Change Password", class: "btn btn-primary btn-xs"%>
+	            <%= f.submit "Change Password", class: "btn btn-primary btn-xs save-btns"%>
 				<button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Close</button>
 	        </div>
 			<% end %>
