--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -47,7 +47,7 @@
         </div>
     </div>
 	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation login ng-pristine ng-valid") do %>
-	    <%unless @user.blank?%><label>Reset password for <%=@user.first_name+" "+@user.last_name.to_s%>. </label><%end%>
+	    <%unless @user.blank?%><label>Reset password for <%=@user.first_name+" "+@user.last_name.to_s%>. </label><br/><%end%>
 		<%= hidden_field_tag(:email_id, @a["email"])%>
 		<%= hidden_field_tag(:username, @a["username"])%>
 		<%= hidden_field_tag(:school_id, @a["school_id"])%>
