changes in class breadcrumbs

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -4,12 +4,12 @@
         	<!-- <div class="panel-heading">
             	<h4 class="panel-title">Class Details</h4>
         	</div> -->
-            <div class="panel-heading">
-                    <%unless @school.blank?%>
-                        <span class="top-school-heading"><%= @school.name + " (" + @school.code + ")" %></span>
-                    <%end%>
-                    <h4 class="panel-title">Class Details</h4>
-                </div>
+            <!-- <div class="panel-heading">
+                <%#=unless @school.blank?%>
+                    <span class="top-school-heading"><%#= @school.name + " (" + @school.code + ")" %></span>
+                <%#=end%>
+                <h4 class="panel-title">Class Details</h4>
+            </div> -->
         	<div class="panel-body">
             	<address>
                 	<strong>Code:</strong>
