--- a/app/views/licenses/_form.html.erb
+++ b/app/views/licenses/_form.html.erb
@@ -5,9 +5,9 @@
                 <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div> -->
 	        <div class="panel-heading">
-	        	<%unless @school.blank?%>
-	  			<span class="top-school-heading"><%= @school.name + " (" + @school.code + ")" %></span>
-				<%end%>
+	        	<%#=unless @school.blank?%>
+	  			<!-- <span class="top-school-heading"><%#= @school.name + " (" + @school.code + ")" %></span> -->
+				<%#=end%>
 	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 			<div id="id_create_license" class="alert_license_success hide">License Added.
