--- a/app/views/licenses/show.html.erb
+++ b/app/views/licenses/show.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
 	<div class="col-md-12">
     	<div class="panel panel-default">
-        	<div class="panel-heading">
+        	<!-- <div class="panel-heading">
             	<h4 class="panel-title">License Details</h4>
-        	</div>
+        	</div> -->
         	<div class="panel-body">
             	<address>
                 	<strong>License Expiry date:</strong>
