--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,9 +2,9 @@
 	<div class="col-md-12">
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
-	        	<%unless @school.blank?%>
-	  			<span class="top-school-heading"><%= @school.name + " (" + @school.code + ")" %></span>
-				<%end%>
+	        	<%#=unless @school.blank?%>
+	  			<!-- <span class="top-school-heading"><%#= @school.name + " (" + @school.code + ")" %></span> -->
+				<%#=end%>
 	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
