--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
 	<div class="col-md-12">
     	<div class="panel panel-default">
-        	<div class="panel-heading">
+        	<!-- <div class="panel-heading">
             	<h4 class="panel-title">Book Information</h4>
-        	</div>
+        	</div> -->
         	<div class="panel-body">
             	<address>
                 	<strong>Book Title: </strong>
@@ -42,5 +42,8 @@
     </div>
 </div>
 <script type="text/javascript">
-	showHideMenu('li_webadmin');
+	showHideMenu('li_book');
+    <% unless current_user.is_web_admin?%>
+      showHideMenu('li_options');   
+    <%end%>
 </script>
