--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -49,4 +49,7 @@
 </div>
 <script type="text/javascript">
 	showHideMenu('li_school');	
+    <% unless current_user.is_web_admin?%>
+      showHideMenu('li_options');   
+    <%end%>
 </script>
