--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -127,6 +127,9 @@ else if(<%= @role_id.name.eql?('School Admin')%>)
 {
     showHideMenu('li_school');	
 }
+<% unless current_user.is_web_admin?%>
+	showHideMenu('li_options');	
+<%end%>
 
 $( ".assign_license" ).click(function() {
           jQuery.get("<%=url_for(:controller=>'users',:action=>'get_user_school_licenses')%>",{ id : $(this).attr('data-input'), role_id:<%=@role_id.id%>},
