changes in user left hand panel

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -53,7 +53,7 @@
 	{
 	    showHideMenu('li_webadmin');	
 	}
-	else if(<%= @role_id.name.eql?('School Admin')%>)
+	else 
 	{
 	    showHideMenu('li_school');	
 	}
