--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -23,6 +23,7 @@
     <%= form_tag( email_for_password_users_path, :method => "post",  :id=>"forgot_password_form", :class=>"form_validation") do %>
         <h4 class="nomargin">Forgot password</h4>
         <p class="mt5 mb20">Enter email to login and access your account.</p>
+        <%= select_tag "school_id", options_from_collection_for_select(@schools, "id", "name"), {:class=>"form-control", :prompt=>"Select School"} %>
 		<%= text_field_tag 'email' , nil, placeholder: 'Email Address', :required=>true, :class=>"form-control uname"  %>
 		<%= submit_tag "Submit", class: "btn btn-success btn-cons ", data: { disable_with: 'Saving...' } %>
 		<%= link_to 'Back', signin_path ,class: "btn btn-white btn-cons" %>
