un archive users/school/classrooms

--- a/app/views/users/un_archive_users_list.html.erb
+++ b/app/views/users/un_archive_users_list.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
 	<div class="panel-body pos-rel"> 
 	<div class="">
-		<table class="table class_common_table" id="users_table">
+		<table class="table class_common_table" id="un_archive_users_table">
 			<thead>
 				<tr>
                 	<th><span class="table-header">First Name</span></th>
