--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -10,9 +10,10 @@
 			<% if can? :create, :classrooms %> 
 			    <%=link_to 'Add Class', new_classroom_path(:school_id=>@school.id), :class=>"btn btn-success btn-xs"%> 
 			<%end%>
-			<%=link_to 'List All Records', classrooms_path(:school_id=>@school.id), :class=>"btn btn-success btn-xs" if @search_flag %>
-			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
-			<%=link_to 'Import Class List', import_list_classrooms_path(:school_id => @school.id), :class=>"btn btn-success btn-xs"%>
+			<%= link_to 'List All Records', classrooms_path(:school_id=>@school.id), :class=>"btn btn-success btn-xs" if @search_flag %>
+			<%= link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
+			<%= link_to 'Import Class List', import_list_classrooms_path(:school_id => @school.id), :class=>"btn btn-success btn-xs"%>
+			<%#= link_to 'Un-archive', un_archive_class_list_classrooms_path(:school_id => @school.id), :class=>"btn btn-success btn-xs" %>
 			<%= submit_tag 'Archive', :class=>"btn btn-success btn-sm delete-classroom-list btn-xs save-btns", :id=>'delete_classroom',:disabled => true, data: { confirm: 'Are you sure?' } %>
 	 	</div>
 	 <div class="table-responsive">
